--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         "drupal/google_analytics": "^4.0",
         "drupal/honeypot": "^2.1",
         "drupal/inline_entity_form": "^1.0@RC",
-        "drupal/key": "1.16.0",
-        "drupal/mail_login": "^2.6",
+        "drupal/key": "^1.17",
+        "drupal/mail_login": "^3",
         "drupal/metatag": "^1.22",
         "drupal/pathauto": "^1.11",
         "drupal/readonly_field_widget": "^1.5",
@@ -85,9 +85,6 @@
             ]
         },
         "patches": {
-            "drupal/key": {
-                "3278542 - Update $logger definition to be compatible with Drupal 10": "https://git.drupalcode.org/project/key/-/commit/2c580e6.diff"
-            },
             "drupal/google_analytics": {
                 "3373921 - Cannot install from existing config": "https://git.drupalcode.org/project/google_analytics/-/merge_requests/33.diff"
             }
